@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-10-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/studio.h: Make sure we don't conflict with OpenMP
+        implementation if it is active but we are not using it.
+
+</UL>
+<p>
 2008-10-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
